--- a/themes/voxduo/templates/article.html
+++ b/themes/voxduo/templates/article.html
@@ -7,11 +7,11 @@
 
 <main id="content">
 	<section class="podcast-episode-small">
-		{% if article.category == 'Are You Not Entertained?'  %}
+		{% if article.category.name == 'Are You Not Entertained?' %}
 			{% set LOGOSTEM = 'Entertained' %}
-		{% elif article.category == 'Reacquainted' %}
+		{% elif article.category.name == 'Reacquainted' %}
 			{% set LOGOSTEM = 'Reacquainted' %}
-		{% elif article.category == 'The Golden Age' %}
+		{% elif article.category.name == 'The Golden Age' %}
 			{% set LOGOSTEM = 'Golden Age' %}
 		{% else %}
 			{% set LOGOSTEM = 'Vox Duo Generic Show Art' %}
