--- a/themes/voxduo/templates/episode_list.html
+++ b/themes/voxduo/templates/episode_list.html
@@ -1,11 +1,11 @@
 <main id="content">
 	{% for article in articles_page.object_list %}
 	<section class="podcast-episode-small">
-		{% if article.category == 'Are You Not Entertained?'  %}
+		{% if article.category.name == 'Are You Not Entertained?'  %}
 			{% set LOGOSTEM = 'Entertained' %}
-		{% elif article.category == 'Reacquainted' %}
+		{% elif article.category.name == 'Reacquainted' %}
 			{% set LOGOSTEM = 'Reacquainted' %}
-		{% elif article.category == 'The Golden Age' %}
+		{% elif article.category.name == 'The Golden Age' %}
 			{% set LOGOSTEM = 'Golden Age' %}
 		{% else %}
 			{% set LOGOSTEM = 'Vox Duo Generic Show Art' %}
