--- a/themes/voxduo/templates/sidebar.html
+++ b/themes/voxduo/templates/sidebar.html
@@ -1,11 +1,45 @@
 <aside>
 	<div>
 		{% if category %}
-		<h2>{{ category}} </h2>
+		<h2>{{ category }}</h2>
 		{% endif %}
-		<p>As film studios battle for our ever-decreasing attention spans, Adam and Joe watch their efforts and ask each other the titular question.</p>
-		<p><a href="https://itunes.apple.com/us/podcast/are-you-not-entertained/id1211555157"><img src="{{ SITEURL }}/theme/media/subscribe/Listen_on_Apple_Podcasts.png" alt="Listen on Apple Podcasts." class="apple-podcasts-button" /></a></p>
-		<p><a href="https://overcast.fm/itunes1211555157/are-you-not-entertained"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on Overcast.jpg" alt="Get it on Overcast." class="overcast-button" /></a></p>
-		<p><a href="https://voxduo.com/entertained?format=rss"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on RSS.jpg" alt="Get it on RSS." class="rss-button" /></a></p>
+		{% if category %}
+			{% if category.name == "Are You Not Entertained?" %}
+				{% set podcast = "Are You Not Entertained?" %}
+			{% elif category.name == "Reacquainted" %}
+				{% set podcast = "Reacquainted" %}
+			{% elif category.name == "The Golden Age" %}
+				{% set podcast = "The Golden Age" %}
+			{% endif %}
+		{% elif article %}
+			{% if article.category == "Are You Not Entertained?" %}
+				{% set podcast = "Are You Not Entertained?" %}
+			{% elif article.category == "Reacquainted" %}
+				{% set podcast = "Reacquainted" %}
+			{% elif article.category == "The Golden Age" %}
+				{% set podcast = "The Golden Age" %}
+			{% endif %}
+		{% endif %}
+		{% if podcast == 'Are You Not Entertained?' %}
+			<p>As film studios battle for our ever-decreasing attention spans, Adam and Joe watch their efforts and ask each other the titular question.'</p>
+			{% set APPLE_URL = 'https://itunes.apple.com/us/podcast/are-you-not-entertained/id1211555157' %}
+			{% set OVERCAST_URL = 'https://overcast.fm/itunes1211555157/are-you-not-entertained' %}
+			{% set RSS_URL = 'https://voxduo.com/entertained?format=rss' %}
+		{% elif podcast == "The Golden Age" %}
+			<p>We've never had more high quality ways to be entertained. From comic book movies to TV shows, from board games to console games, from books to comic books, we're living through a golden age of entertainment.</p>
+			<p>Join Adam &amp; Joe as they discuss their wealth of choices.</p>
+			{% set APPLE_URL = 'https://itunes.apple.com/us/podcast/the-golden-age/id1211555157' %}
+			{% set OVERCAST_URL = 'https://overcast.fm/itunes1211555157/the-golden-age' %}
+			{% set RSS_URL = 'https://voxduo.com/goldenage?format=rss' %}
+		{% elif podcast == "Reacquainted" %}
+			<p>Adam and Joe were childhood friends, but life pulled them apart. 20 years later, they're very different people.</p>
+			<p>Reacquainted is asking both of them the question we all want to ask old classmates: What in the world <em>happened</em> to you?</p>
+			{% set APPLE_URL = 'https://itunes.apple.com/us/podcast/reacquainted/id1210150524' %}
+			{% set OVERCAST_URL = 'https://overcast.fm/itunes1210150524/reacquainted' %}
+			{% set RSS_URL = 'https://overcast.fm/itunes1210150524/reacquainted' %}
+		{% endif %}
+		<p><a href="{{ APPLE_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Listen_on_Apple_Podcasts.png" alt="Listen on Apple Podcasts." class="apple-podcasts-button" /></a></p>
+		<p><a href="{{ OVERCAST_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on Overcast.jpg" alt="Get it on Overcast." class="overcast-button" /></a></p>
+		<p><a href="{{ RSS_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on RSS.jpg" alt="Get it on RSS." class="rss-button" /></a></p>
 	</div>
 </aside>
