--- a/themes/voxduo/templates/base.html
+++ b/themes/voxduo/templates/base.html
@@ -42,7 +42,7 @@
 		<img src="{{ SITEURL }}/theme/media/twitter_avatar.png" alt="Two crossed microphones" />
 	</div>
 	<div id="header-title">	<!-- Exists to vertically center text next to the logo -->
-		<h1>{{ SITENAME }}</h1>
+		<h1><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
 		<p>{{ SITE_DESCRIPTION }}</p>
 	</div>
 </header>
