Link the sidebars to the new RSS feeds

--- a/themes/voxduo/templates/sidebar.html
+++ b/themes/voxduo/templates/sidebar.html
@@ -21,22 +21,22 @@
 			{% endif %}
 		{% endif %}
 		{% if podcast == 'Are You Not Entertained?' %}
-			<p>As film studios battle for our ever-decreasing attention spans, Adam and Joe watch their efforts and ask each other the titular question.'</p>
+			<p>As film studios battle for our ever-decreasing attention spans, Adam and Joe watch their efforts and ask each other the titular question.</p>
 			{% set APPLE_URL = 'https://itunes.apple.com/us/podcast/are-you-not-entertained/id1211555157' %}
 			{% set OVERCAST_URL = 'https://overcast.fm/itunes1211555157/are-you-not-entertained' %}
-			{% set RSS_URL = 'https://voxduo.com/entertained?format=rss' %}
+			{% set RSS_URL = '{{SITEURL}}/entertained.rss' %}
 		{% elif podcast == "The Golden Age" %}
 			<p>We've never had more high quality ways to be entertained. From comic book movies to TV shows, from board games to console games, from books to comic books, we're living through a golden age of entertainment.</p>
 			<p>Join Adam &amp; Joe as they discuss their wealth of choices.</p>
 			{% set APPLE_URL = 'https://itunes.apple.com/us/podcast/the-golden-age/id1211555157' %}
 			{% set OVERCAST_URL = 'https://overcast.fm/itunes1211555157/the-golden-age' %}
-			{% set RSS_URL = 'https://voxduo.com/goldenage?format=rss' %}
+			{% set RSS_URL = '{{SITEURL}}/goldenage.rss' %}
 		{% elif podcast == "Reacquainted" %}
 			<p>Adam and Joe were childhood friends, but life pulled them apart. 20 years later, they're very different people.</p>
 			<p>Reacquainted is asking both of them the question we all want to ask old classmates: What in the world <em>happened</em> to you?</p>
 			{% set APPLE_URL = 'https://itunes.apple.com/us/podcast/reacquainted/id1210150524' %}
 			{% set OVERCAST_URL = 'https://overcast.fm/itunes1210150524/reacquainted' %}
-			{% set RSS_URL = 'https://overcast.fm/itunes1210150524/reacquainted' %}
+			{% set RSS_URL = '%s/reacquainted.rss' % SITEURL %}
 		{% endif %}
 		<p><a href="{{ APPLE_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Listen_on_Apple_Podcasts.png" alt="Listen on Apple Podcasts." class="apple-podcasts-button" /></a></p>
 		<p><a href="{{ OVERCAST_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on Overcast.jpg" alt="Get it on Overcast." class="overcast-button" /></a></p>
