--- a/themes/voxduo/static/style.scss
+++ b/themes/voxduo/static/style.scss
@@ -86,6 +86,9 @@ aside > div > p {
 		"episode-description episode-description";
 }
 .podcast-episode-small {
+	padding: 3rem 0 2rem 0;
+}
+.podcast-episode-small {
 	grid-template-columns: 13rem 1fr;
 	grid-gap: 0.25rem 5rem;
 }
@@ -108,9 +111,9 @@ aside > div > p {
 	font-weight: bold;
 	font-size: 120%;
 }
-.episode-description {
-	padding-bottom: 5rem;
-}
+// .episode-description {
+// 	padding-bottom: 5rem;
+// }
 .podcast-preview {
 	height: 25rem;
 	width: 25rem;
@@ -128,6 +131,16 @@ hr.style-two {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    // margin: 1rem 0 5rem 0;
+    // padding: 1rem 0 1rem 0;
+}
+.overcast-button, .rss-button {
+	height: 60px;
+	width: 166px;
+}
+.apple-podcasts-button {
+	width: 166px;
+	height: 42px;
 }
 
 /*
@@ -168,14 +181,6 @@ hr.style-two {
 		font-size: 1.7rem;
 		line-height: 1.7rem;
 	}
-	.overcast-button, .rss-button {
-		height: 60px;
-		width: 166px;
-	}
-	.apple-podcasts-button {
-		width: 166px;
-		height: 42px;
-	}
 }
 
 /*
@@ -184,13 +189,13 @@ hr.style-two {
   https://pearsonified.com/typography/
 */
 @media all and (max-width: 959px) and (min-width: 600px) {
-	$baseline: 2.9rem;
+	$baseline: 2.7rem;
 	.container {
 		grid-gap: 0.5rem 0.5rem;
 	}
 	body {
 		/* Primary text: 19px; */
-		font-size: 1.9rem;
+		font-size: 1.3rem;
 		line-height: $baseline;
 
 	}
@@ -200,24 +205,43 @@ hr.style-two {
 	}
 	h1 {
 		/* 50 pixels */
-		font-size: 5rem;
+		font-size: 3.4rem;
 		line-height: 2*$baseline;
 	}
 	h2 {
 		/* 45 pixels */
-		font-size: 3.1rem;
+		font-size: 2.1rem;
 		line-height: 1.5*$baseline;
 		padding: 0 0 .5*$baseline 0;
 	}
 	h3, h4, h5, h6 {
 		/* 36 pixels */
-		font-size: 2.4rem;
+		font-size: 1.7rem;
 		line-height: $baseline;
 	}
 	.smalltext {
 		/* 22 pixels */
-		font-size: 1.5rem;
-		line-height: 1.5rem;
+		font-size: 1rem;
+		line-height: 1rem;
+	}
+	.container-sidebar {
+		display: grid;
+		grid-gap: 10rem 5rem;
+		grid-template-columns: 3fr 1fr;
+		grid-template-areas:
+			"header header"
+			"main sidebar"
+			"footer footer";
+		max-width: 75rem;
+		margin: 0 auto 0 auto;
+	}
+	.overcast-button, .rss-button {
+		height: 30px;
+		width: 83px;
+	}
+	.apple-podcasts-button {
+		height: 21px;
+		width: 83px;
 	}
 }
 
@@ -230,7 +254,7 @@ hr.style-two {
 	$baseline: 2.1rem;
 	body {
 		/* Primary text: 14px; */
-		font-size: 1.4rem;
+		font-size: 1.3rem;
 		line-height: $baseline;
 
 	}
@@ -238,7 +262,7 @@ hr.style-two {
 		grid-gap: 0.5rem 0.5rem;
 	}
 	header {
-		margin: 1rem auto 5rem auto;
+		margin: 1rem auto 2rem auto;
 		grid-template-columns: 12rem 1fr;
 		grid-gap: 0.5rem 2rem;
 		height: 12rem;
@@ -249,24 +273,24 @@ hr.style-two {
 	}
 	h1 {
 		/* 37 pixels */
-		font-size: 3.7rem;
+		font-size: 3.4rem;
 		line-height: 2*$baseline;
 	}
 	h2 {
 		/* 23 pixels */
-		font-size: 2.3rem;
+		font-size: 2.1rem;
 		line-height: 1.5*$baseline;
 		padding: 0 0 .5*$baseline 0;
 	}
 	h3, h4, h5, h6 {
 		/* 18 pixels */
-		font-size: 1.8rem;
+		font-size: 1.7rem;
 		line-height: $baseline;
 	}
 	.smalltext {
 		/* 22 pixels */
-		font-size: 1.1rem;
-		line-height: 1.1rem;
+		font-size: 1rem;
+		line-height: 1rem;
 	}
 	.podcast-preview {
 		height: 13rem;
@@ -286,5 +310,23 @@ hr.style-two {
 		height: 115px;
 		width: 115px;
 	}
-
+	.container-sidebar {
+		display: grid;
+		grid-gap: 0.5rem 0.5rem;
+		grid-template-columns: 3fr 1fr;
+		grid-template-areas:
+			"header header"
+			"main main"
+			"sidebar sidebar"
+			"footer footer";
+		margin: 0 auto 0 auto;
+	}
+	.overcast-button, .rss-button {
+		height: 30px;
+		width: 83px;
+	}
+	.apple-podcasts-button {
+		height: 21px;
+		width: 83px;
+	}
 }
