--- a/themes/voxduo/static/style.scss
+++ b/themes/voxduo/static/style.scss
@@ -11,13 +11,16 @@ html {
 	box-sizing: border-box;
 }
 body {
-	background-color: #d4b392;
+	background-color: #f8f8f8;
 }
 a {
-	color: #403579;
+	color: #07889B;
 }
 a:visited {
-	color: #640231;
+	color: #66B9BF;
+}
+h1, h2, h3, h4, h5, h6 {
+	color: #E37222;
 }
 .container {
 	display: grid;
@@ -35,7 +38,8 @@ a:visited {
 	grid-template-columns: 3fr 1fr;
 	grid-template-areas:
 		"header header"
-		"main sidebar"
+		"main description"
+		"main subscription"
 		"footer footer";
 	max-width: 90rem;
 	margin: 0 auto 0 auto;
@@ -70,10 +74,16 @@ footer {
 	text-align: center;
 }
 aside {
-	grid-area: sidebar;
 	// background-color: white;
 	padding: 0 2rem 1rem 2rem;
 }
+#sidebar-description {
+	grid-area: show-description;
+}
+#sidebar-subscription {
+	grid-area: show-subscription;
+}
+
 aside > div > p {
 	margin-top: 0px;
 }
@@ -114,6 +124,9 @@ aside > div > p {
 // .episode-description {
 // 	padding-bottom: 5rem;
 // }
+.podcast-preview, .podcast-preview-small {
+	border: 1px black solid;
+}
 .podcast-preview {
 	height: 25rem;
 	width: 25rem;
@@ -230,7 +243,8 @@ hr.style-two {
 		grid-template-columns: 3fr 1fr;
 		grid-template-areas:
 			"header header"
-			"main sidebar"
+			"main show-description"
+			"main show-subscription"
 			"footer footer";
 		max-width: 75rem;
 		margin: 0 auto 0 auto;
@@ -316,8 +330,9 @@ hr.style-two {
 		grid-template-columns: 3fr 1fr;
 		grid-template-areas:
 			"header header"
+			"show-subscription show-subscription"
 			"main main"
-			"sidebar sidebar"
+			"show-description show-description"
 			"footer footer";
 		margin: 0 auto 0 auto;
 	}
