Move the site link and name to the logo

--- a/themes/voxduo/templates/base.html
+++ b/themes/voxduo/templates/base.html
@@ -39,10 +39,9 @@
 
 <header>
 	<div id="header-image">
-		<img src="{{ SITEURL }}/theme/media/twitter_avatar.png" alt="Two crossed microphones" />
+		<a href="{{ SITEURL }}" alt="Vox Duo"><img src="{{ SITEURL }}/theme/media/twitter_avatar.png" alt="Two crossed microphones" /></a>
 	</div>
 	<div id="header-title">	<!-- Exists to vertically center text next to the logo -->
-		<h1><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
 		<p>{{ SITE_DESCRIPTION }}</p>
 	</div>
 </header>
