--- a/themes/voxduo/templates/sidebar.html
+++ b/themes/voxduo/templates/sidebar.html
@@ -1,34 +1,3 @@
-{% if category %}
-	{% if category.name == "Are You Not Entertained?" %}
-		{% set podcast = "Are You Not Entertained?" %}
-	{% elif category.name == "Reacquainted" %}
-		{% set podcast = "Reacquainted" %}
-	{% elif category.name == "The Golden Age" %}
-		{% set podcast = "The Golden Age" %}
-	{% endif %}
-{% elif article %}
-	{% if article.category == "Are You Not Entertained?" %}
-		{% set podcast = "Are You Not Entertained?" %}
-	{% elif article.category == "Reacquainted" %}
-		{% set podcast = "Reacquainted" %}
-	{% elif article.category == "The Golden Age" %}
-		{% set podcast = "The Golden Age" %}
-	{% endif %}
-{% endif %}
-
-{% if podcast == 'Are You Not Entertained?' %}
-	{% set APPLE_URL = 'https://itunes.apple.com/us/podcast/are-you-not-entertained/id1211555157' %}
-	{% set OVERCAST_URL = 'https://overcast.fm/itunes1211555157/are-you-not-entertained' %}
-	{% set RSS_URL = '{{SITEURL}}/entertained.rss' %}
-{% elif podcast == "The Golden Age" %}
-	{% set APPLE_URL = 'https://itunes.apple.com/us/podcast/the-golden-age/id1211555157' %}
-	{% set OVERCAST_URL = 'https://overcast.fm/itunes1211555157/the-golden-age' %}
-	{% set RSS_URL = '{{SITEURL}}/goldenage.rss' %}
-{% elif podcast == "Reacquainted" %}
-	{% set APPLE_URL = 'https://itunes.apple.com/us/podcast/reacquainted/id1210150524' %}
-	{% set OVERCAST_URL = 'https://overcast.fm/itunes1210150524/reacquainted' %}
-	{% set RSS_URL = '%s/reacquainted.rss' % SITEURL %}
-{% endif %}
 
 <aside id="sidebar-description">
 	<div>
@@ -51,6 +20,6 @@
 	<div>
 		<p><a href="{{ APPLE_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Listen_on_Apple_Podcasts.png" alt="Listen on Apple Podcasts." class="apple-podcasts-button" /></a></p>
 		<p><a href="{{ OVERCAST_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on Overcast.jpg" alt="Get it on Overcast." class="overcast-button" /></a></p>
-		<p><a href="{{ RSS_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on RSS.jpg" alt="Get it on RSS." class="rss-button" /></a></p>
+		<p><a href="{{ PODCAST_RSS_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on RSS.jpg" alt="Get it on RSS." class="rss-button" /></a></p>
 	</div>
 </aside>
