--- a/themes/voxduo/templates/base.html
+++ b/themes/voxduo/templates/base.html
@@ -108,7 +108,7 @@
 
 <header>
 	<div id="header-image">
-		<a href="{{ SITEURL }}" alt="Vox Duo"><img src="{{ SITEURL }}/theme/media/twitter_avatar.png" alt="Two crossed microphones" /></a>
+		<a href="{{ SITEURL }}" alt="Vox Duo"><img src="{{ SITEURL }}/theme/media/Site%20Logo.png" alt="Two crossed microphones" /></a>
 	</div>
 	<div id="header-title">	<!-- Exists to vertically center text next to the logo -->
 		<p>{{ SITE_DESCRIPTION }}</p>
