--- a/themes/voxduo/static/style.scss
+++ b/themes/voxduo/static/style.scss
@@ -19,9 +19,6 @@ a {
 a:visited {
 	color: #66B9BF;
 }
-h1, h2, h3, h4, h5, h6 {
-	color: #E37222;
-}
 header {
 	grid-area: header;
 	display: grid;
@@ -44,7 +41,7 @@ header h1 {
 	margin: auto 0rem;
 	padding: auto 0rem;
 }
-#main {
+main {
 	grid-area: main;
 }
 footer {
@@ -113,10 +110,10 @@ aside > div > p {
 	height: 13rem;
 	width: 13rem;
 }
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
+	color: #E37222;
 	margin: 0;
 }
-
 // https://css-tricks.com/examples/hrs/
 hr.style-two {
     border: 0;
@@ -130,8 +127,8 @@ hr.style-two {
 	width: 166px;
 }
 .apple-podcasts-button {
+	height: 60px;
 	width: 166px;
-	height: 42px;
 }
 .container {
 	display: grid;
@@ -149,11 +146,12 @@ hr.style-two {
 	grid-template-columns: 3fr 1fr;
 	grid-template-areas:
 		"header header"
-		"main show-subscription"
 		"main show-description"
+		"main show-subscription"
 		"footer footer";
 	max-width: 90rem;
 	margin: 0 auto 0 auto;
+	padding: 0 0 0 1rem;
 }
 
 /*
@@ -249,12 +247,8 @@ hr.style-two {
 		max-width: 75rem;
 		margin: 0 auto 0 auto;
 	}
-	.overcast-button, .rss-button {
+	.overcast-button, .rss-button, .apple-podcasts-button {
 		height: 30px;
-		width: 83px;
-	}
-	.apple-podcasts-button {
-		height: 21px;
 		width: 83px;
 	}
 }
@@ -336,12 +330,11 @@ hr.style-two {
 			"footer footer";
 		margin: 0 auto 0 auto;
 	}
-	.overcast-button, .rss-button {
-		height: 30px;
-		width: 83px;
+	#sidebar-subscription > p {
+		display: inline;
 	}
-	.apple-podcasts-button {
-		height: 21px;
+	.overcast-button, .rss-button, .apple-podcasts-button {
+		height: 30px;
 		width: 83px;
 	}
 }
