--- a/themes/voxduo/templates/sidebar.html
+++ b/themes/voxduo/templates/sidebar.html
@@ -1,5 +1,5 @@
 
-<aside>
+<!-- <aside> -->
 	<div id="sidebar-description">
 		{% if category %}
 		<h2>{{ category }}</h2>
@@ -19,4 +19,4 @@
 		<p><a href="{{ OVERCAST_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on Overcast.jpg" alt="Get it on Overcast." class="overcast-button" /></a></p>
 		<p><a href="{{ PODCAST_RSS_URL }}"><img src="{{ SITEURL }}/theme/media/subscribe/Get it on RSS.jpg" alt="Get it on RSS." class="rss-button" /></a></p>
 	</div>
-</aside>
+<!-- </aside> -->
