fix home page padding

--- a/themes/voxduo/static/style.scss
+++ b/themes/voxduo/static/style.scss
@@ -139,6 +139,7 @@ hr.style-two {
 		"footer";
 	max-width: 90rem;
 	margin: 0 auto 0 auto;
+	padding: 0 0 0 1rem;
 }
 .container-sidebar {
 	display: grid;
