--- a/themes/voxduo/templates/article.html
+++ b/themes/voxduo/templates/article.html
@@ -10,7 +10,7 @@
 
 <main id="content">
 	<section class="podcast-episode-small">
-		<div class="podcast-artwork-small"><img src="{{ SITEURL }}/theme/media/{{ LOGOSTEM }} Logo preview.jpg" alt="Podcast Artwork for {{ article.category }}" class="podcast-preview-small" />
+		<div class="podcast-artwork-small"><img src="{{ SITEURL }}/theme/media/{{ article.category.logo }}" alt="Podcast Artwork for {{ article.category }}" class="podcast-preview-small" />
 		</div>
 
 		<div class="episode-meta">
