--- a/themes/voxduo/templates/base.html
+++ b/themes/voxduo/templates/base.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+<html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:website="http://ogp.me/ns/website" lang="en-US" itemscope itemtype="http://schema.org/WebPage">
 <head>
 	{% block head %}
 	<meta charset="utf-8" />
 	<meta name="viewport" content="initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
 	<link rel="stylesheet" href="{{ SITEURL }}/theme/styles.css" type="text/css" media="screen" />
 	{% if FEED_ALL_ATOM %}
