--- a/themes/voxduo/templates/pagination.html
+++ b/themes/voxduo/templates/pagination.html
@@ -2,13 +2,17 @@
 <div class="pager">
     {% if articles_page.has_previous() %}
         {% set num = articles_page.previous_page_number() %}
-        <a href="{{ SITEURL }}/{{ page_name }}{{ num if num > 1 else '' }}.html">&larr; Newer</a>
+        {% if num <= 1 %}
+        <a href="{{ SITEURL }}/{{ page_name }}">&larr; Newer</a>
+        {% elif num > 1 %}
+        <a href="{{ SITEURL }}/{{ page_name }}/page/{{ num }}">&larr; Newer</a>
+        {% endif %}
     {% endif %}
     {% if articles_page.has_previous() and articles_page.has_next() %}
         &bull;
     {% endif %}
     {% if articles_page.has_next() %}
-        <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html">Older &rarr;</a>
+        <a href="{{ SITEURL }}/{{ page_name }}/page/{{ articles_page.next_page_number() }}">Older &rarr;</a>
     {% endif %}
 </div>
 {% endif %}
