Use the autoplay attribute correctly

--- a/themes/voxduo/templates/article.html
+++ b/themes/voxduo/templates/article.html
@@ -22,7 +22,7 @@
 		<div class="episode-description">
 		{{ article.content }}
 			<div class="player">
-				<audio controls="controls" id="podcast_player" autoplay="false" loop="false" preload="metadata" src="{{ article.podcast }}" type="audo/mpeg">
+				<audio controls id="podcast_player" preload="metadata" src="{{ article.podcast }}" type="audo/mpeg">
 					Your browser does not support the audio element.
 				</audio>
 				<p><a href="{{ article.podcast }}">Download the MP3</a></p>
