--- a/themes/voxduo/templates/base.html
+++ b/themes/voxduo/templates/base.html
@@ -30,13 +30,13 @@
 
     {% if article %}
     <meta property="og:title" content="{{ article.title }}" />
-    <meta property="og:url" content="{{ article.url }}" />
+    <meta property="og:url" content="{{ SITEURL }}/{{ article.url }}" />
     <meta property="og:type" content="article" />
     <meta property="og:image" content="{{ SITEURL }}/theme/media/{{ article.category.logo }}" />
-    <meta property="og:description" content="{{ article.summary }}" />
+    <meta property="og:description" content="{{ article.description }}" />
     <meta itemprop="name" content="{{ article.title }}" />    
-    <meta itemprop="url" content="{{ article.url }}" />
-    <meta itemprop="description" content="{{ article.summary }}" />
+    <meta itemprop="url" content="{{ SITEURL }}/{{ article.url }}" />
+    <meta itemprop="description" content="{{ article.description }}" />
 
     {% elif category %}
     <meta property="og:title" content="{{ category.name }} Episodes" />
